// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Commentable renders default 1`] = `
<div
  className="Commentable"
>
  <div
    className="Commentable-avatar mr-2 mr-lg-3"
  >
    <Connect(Avatar)
      id="#OWNER"
    />
  </div>
  <div
    className="Commentable-content"
  >
    <p
      className="Commentable-author"
    >
      <Connect(UsernameLink)
        className="text-dark"
        id="#OWNER"
      />
      <TimeAgo
        className="Commentable-meta-created"
        component="time"
        date={0}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </p>
    <div
      className="Commentable-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "#BODY",
        }
      }
    />
    <p
      className="my-1"
    >
      <Action
        className="mr-3"
        icon="far fa-thumbs-up"
      >
        0
      </Action>
      <Action
        className="mr-3"
        icon="far fa-thumbs-down"
      >
        0
      </Action>
      <Action
        className="d-none d-sm-inline"
      >
        RESPONDER
      </Action>
      <Action
        className="d-sm-none"
        icon="far fa-comment-alt"
      />
    </p>
  </div>
</div>
`;

exports[`Commentable renders with given comment 1`] = `
<div
  className="Commentable"
>
  <div
    className="Commentable-avatar mr-2 mr-lg-3"
  >
    <Connect(Avatar)
      id="#OWNER"
    />
  </div>
  <div
    className="Commentable-content"
  >
    <p
      className="Commentable-author"
    >
      <Connect(UsernameLink)
        className="text-dark"
        id="#OWNER"
      />
      <TimeAgo
        className="Commentable-meta-created"
        component="time"
        date={0}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </p>
    <div
      className="Commentable-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "#BODY",
        }
      }
    />
    <p
      className="my-1"
    >
      <Action
        className="mr-3"
        icon="far fa-thumbs-up"
      >
        0
      </Action>
      <Action
        className="mr-3"
        icon="far fa-thumbs-down"
      >
        0
      </Action>
      <Action
        className="d-none d-sm-inline"
      >
        RESPONDER
      </Action>
      <Action
        className="d-sm-none"
        icon="far fa-comment-alt"
      />
    </p>
  </div>
</div>
`;

exports[`Commentable renders with user 1`] = `
<div
  className="Commentable"
>
  <div
    className="Commentable-avatar mr-2 mr-lg-3"
  >
    <Connect(Avatar)
      id={
        Object {
          "avatar": "bar",
          "username": "foo",
        }
      }
    />
  </div>
  <div
    className="Commentable-content"
  >
    <p
      className="Commentable-author"
    >
      <Connect(UsernameLink)
        className="text-dark"
        id={
          Object {
            "avatar": "bar",
            "username": "foo",
          }
        }
      />
      <TimeAgo
        className="Commentable-meta-created"
        component="time"
        date={0}
        formatter={[Function]}
        live={true}
        maxPeriod={Infinity}
        minPeriod={0}
        now={[Function]}
      />
    </p>
    <div
      className="Commentable-body"
      dangerouslySetInnerHTML={
        Object {
          "__html": "#BODY",
        }
      }
    />
    <p
      className="my-1"
    >
      <Action
        className="mr-3"
        icon="far fa-thumbs-up"
      >
        0
      </Action>
      <Action
        className="mr-3"
        icon="far fa-thumbs-down"
      >
        0
      </Action>
      <Action
        className="d-none d-sm-inline"
      >
        RESPONDER
      </Action>
      <Action
        className="d-sm-none"
        icon="far fa-comment-alt"
      />
    </p>
  </div>
</div>
`;
